--- a/FortressCodesDomain.csproj
+++ b/FortressCodesDomain.csproj
@@ -73,12 +73,16 @@
     <Compile Include="DbModels\Voucher.cs" />
     <Compile Include="DbModels\VoucherMetadata.cs" />
     <Compile Include="DbModels\VoucherType.cs" />
+    <Compile Include="Enumerations\Enumerations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
