Device size helper added here so can be shared across projects Enumerations - added in method to get enum value Repository.cs - new methods to get device by formatted name, get actual device or if device is missing get unknown device, Get device level, and get pricing model by device, tier family

--- a/FortressCodesDomain.csproj
+++ b/FortressCodesDomain.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\DeviceSizeHelper.cs" />
     <Compile Include="DbModels\AspNetRole.cs" />
     <Compile Include="DbModels\AspNetUser.cs" />
     <Compile Include="DbModels\AspNetUserClaim.cs" />
