--- a/FortressCodesDomain.csproj
+++ b/FortressCodesDomain.csproj
@@ -77,7 +77,9 @@
     <Compile Include="DbModels\PartnerChannel.cs" />
     <Compile Include="DbModels\PricingModel.cs" />
     <Compile Include="DbModels\Status.cs" />
+    <Compile Include="DbModels\tbl_DeviceValueAudit.cs" />
     <Compile Include="DbModels\tbl_PreloadedDevices.cs" />
+    <Compile Include="DbModels\tbl_profanity.cs" />
     <Compile Include="DbModels\Tier.cs" />
     <Compile Include="DbModels\Transaction.cs" />
     <Compile Include="DbModels\TransactionType.cs" />
@@ -86,6 +88,7 @@
     <Compile Include="DbModels\VoucherMetadata.cs" />
     <Compile Include="DbModels\VoucherType.cs" />
     <Compile Include="Enumerations\Enumerations.cs" />
+    <Compile Include="Helpers\CodesHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\Repository.cs" />
