--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@
 ################################################################################
 
 /.vs
+/packages/EntityFramework.6.1.3
+/packages/Newtonsoft.Json.8.0.3
+/FortressCodesDomain.sln
+/obj/Production
+/obj/Release
+/obj/Staging Publish
+/obj/Debug/FortressCodesDomain.csproj.CopyComplete
+/obj/Debug/FortressCodesDomain.csproj.CoreCompileInputs.cache
+*.dll
