--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs/fortress.fcd/v15
+/.vs/FortressCodesDomain/v15/Server/sqlite3
+/packages/EntityFramework.6.1.3
+/packages/Newtonsoft.Json.8.0.3
+*.sln
+*.suo
