Additional voucher registration updates

--- a/FortressCodesDomain.csproj
+++ b/FortressCodesDomain.csproj
@@ -80,6 +80,7 @@
     <Compile Include="DbModels\tbl_DeviceValueAudit.cs" />
     <Compile Include="DbModels\tbl_PreloadedDevices.cs" />
     <Compile Include="DbModels\tbl_profanity.cs" />
+    <Compile Include="DbModels\tbl_VoucherRegistrations.cs" />
     <Compile Include="DbModels\Tier.cs" />
     <Compile Include="DbModels\Transaction.cs" />
     <Compile Include="DbModels\TransactionType.cs" />
