--- a/FortressCodesDomain.csproj
+++ b/FortressCodesDomain.csproj
@@ -74,6 +74,7 @@
     <Compile Include="DbModels\MembershipTier.cs" />
     <Compile Include="DbModels\Partner.cs" />
     <Compile Include="DbModels\PartnerChannel.cs" />
+    <Compile Include="DbModels\PartnerPortalBusinessEntity.cs" />
     <Compile Include="DbModels\PricingModel.cs" />
     <Compile Include="DbModels\Status.cs" />
     <Compile Include="DbModels\tbl_DeviceValueAudit.cs" />
