--- a/FortressCodesDomain.csproj
+++ b/FortressCodesDomain.csproj
@@ -43,7 +43,7 @@
       <HintPath>..\..\FortressVoucherSystem\fortressvouchers\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\fci\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\Users\Chris Hughes\Documents\Visual Studio 2017\Projects\Fortress.ClaimsPortal\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
