RetailClass (standard/advanced)

--- a/FortressCodesDomain.csproj
+++ b/FortressCodesDomain.csproj
@@ -85,6 +85,7 @@
     <Compile Include="DbModels\PartnerPortalBusinessEntity.cs" />
     <Compile Include="DbModels\PartnerPortalBusinessType.cs" />
     <Compile Include="DbModels\PricingModel.cs" />
+    <Compile Include="DbModels\RetailClass.cs" />
     <Compile Include="DbModels\Status.cs" />
     <Compile Include="DbModels\tbl_DeviceValueAudit.cs" />
     <Compile Include="DbModels\tbl_PreloadedDevices.cs" />
