--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,22 @@
 /bin/Debug/Newtonsoft.Json.xml
 /bin/Release/Newtonsoft.Json.dll
 /bin/Release/Newtonsoft.Json.xml
+*.dll
+/bin/Debug/FortressDomain.dll.config
+/bin/Debug/FortressDomain.pdb
+/bin/Debug/System.Web.Helpers.xml
+/bin/Debug/Twilio.Api.xml
+/bin/Debug/Twilio.Api.pdb
+/bin/Debug/System.Web.WebPages.xml
+/bin/Debug/System.Web.WebPages.Deployment.xml
+/bin/Debug/System.Web.Razor.xml
+/bin/Debug/RestSharp.xml
+/bin/Release/Twilio.Api.xml
+/bin/Release/Twilio.Api.pdb
+/bin/Release/System.Web.WebPages.xml
+/bin/Release/System.Web.WebPages.Deployment.xml
+/bin/Release/System.Web.Razor.xml
+/bin/Release/System.Web.Helpers.xml
+/bin/Release/RestSharp.xml
+/bin/Release/FortressDomain.pdb
+/bin/Release/FortressDomain.dll.config
