--- a/FortressCodesDomain.csproj
+++ b/FortressCodesDomain.csproj
@@ -99,6 +99,7 @@
     <Compile Include="DbModels\UserProfileInfo.cs" />
     <Compile Include="DbModels\Voucher.cs" />
     <Compile Include="DbModels\VoucherMetadata.cs" />
+    <Compile Include="DbModels\SKUVolumePricing.cs" />
     <Compile Include="DbModels\VoucherSKU.cs" />
     <Compile Include="DbModels\VoucherType.cs" />
     <Compile Include="Enumerations\Enumerations.cs" />
