Changes for underwriter hash

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 /bin/Release/RestSharp.xml
 /bin/Release/FortressDomain.pdb
 /bin/Release/FortressDomain.dll.config
+/.vs/FortressCodesDomain/v16/Server/sqlite3
